--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ layout: default
 
 {% include experiences.html %}
 
+{% include trainings.html %}
+
 {% include projects.html %}
 
 {% include publications.html %}
